GNOME Bugzilla – Bug 733165
rhythmbox crashes with SIGSEGV in gst_pad_link_full
Last modified: 2014-08-11 06:56:49 UTC
This is on Debian sid amd64. Rhythmbox was playing a song. And when the song ended, rhythmbox crashed. Backtrace for the corresponding thread is below:
+ Trace 233818
Thread 1 (Thread 0x7f340fff7700 (LWP 4751))
Created attachment 280660 [details] Complete trace for the crash with debug symbols installed
Created attachment 280661 [details] gstreamer installed package list
Created attachment 280662 [details] gstreamer installed package list dpkg -l | grep gstream > /tmp/gstreamer.packagelist.txt
Pasting the entire trace as per https://wiki.gnome.org/Community/GettingInTouch/Bugzilla/GettingTraces [New LWP 4751] [New LWP 4237] [New LWP 4236] [New LWP 4246] [New LWP 4635] [New LWP 4235] [New LWP 4634] [New LWP 4250] [New LWP 4655] [New LWP 4630] [New LWP 4750] [New LWP 4636] [New LWP 4637] [New LWP 4749] [Thread debugging using libthread_db enabled] Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1". Core was generated by `rhythmbox'. Program terminated with signal SIGSEGV, Segmentation fault.
+ Trace 233819
*** Bug 734088 has been marked as a duplicate of this bug. ***
This probably fixes it, can someone confirm? http://cgit.freedesktop.org/gstreamer/gst-plugins-base/commit/?id=a0a9fd004b28b00472a393cebda534d3a8af5dc8 commit a0a9fd004b28b00472a393cebda534d3a8af5dc8 Author: Sebastian Dröge <sebastian@centricular.com> Date: Fri Aug 1 15:00:46 2014 +0200 playbin: Keep a reference to the playsink sinkpads Otherwise playsink might get shut down without us noticing that our pad references are gone now. Probably fixes https://bugzilla.gnome.org/show_bug.cgi?id=733165